overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -396,7 +396,7 @@ ul li {
  * 5.0 Site Header
  */
 .site-header {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 100vh;
   position: relative;
@@ -404,7 +404,7 @@ ul li {
   background: url(../images/home.jpeg) no-repeat center center/cover;
   object-fit: cover;
   /* background: url('https://images.bhaskarassets.com/thumb/1200x900/web2images/521/2022/11/07/orig_41_1667770431.jpg') no-repeat center center/cover; */
-  display: table;
+  /* display: table; */
 }
 
 .site-header::before {
@@ -422,7 +422,7 @@ ul li {
   position: relative;
   text-align: center;
   /* text-transform: uppercase; */
-  width: 100vw;
+  width: 100%;
   z-index: 1;
   padding: 0 15px;
   display: flex;
